# convert-screenshot

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  build.rs  rustfmt.toml
cli/: Cargo.toml  build.rs
cli/src/: config.rs  main.rs  options.rs
common/: Cargo.toml
common/src/: enums.rs  lib.rs  structs.rs
gui/: Cargo.toml  build.rs
gui/src/: gui.rs  image.rs  main.rs
src/: main.rs  structs.rs
src/structs/: config.rs  enums.rs  options.rs
