[patch.crates-io]
eframe = { git = "https://github.com/TetraTheta/egui.git", branch = "offset-test" }
egui = { git = "https://github.com/TetraTheta/egui.git", branch = "offset-test" }
egui-winit = { git = "https://github.com/TetraTheta/egui.git", branch = "offset-test" }
egui_glow = { git = "https://github.com/TetraTheta/egui.git", branch = "offset-test" }

[workspace]
members = [
  "cli",
  "common",
  "gui",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.87"
version = "1.2.3"

[workspace.dependencies]
winresource = "^0.1"

[profile.release]
lto = true # "thin"
opt-level = "s"
strip = true
