[workspace]
members = [
  "cli",
  "common",
  "gui",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "3.1.0"

[workspace.dependencies]
# unless specified as 'dependencies' or 'build-dependencies' in workspace members, these won't be used
clap = { version = "4.5.40", features = ["derive", "env", "string", "unicode", "wrap_help"] }
fltk = { version = "1.5.9", features = ["fltk-bundled"] }
fltk-theme = "0.7.9"
image = "0.25.6"
libblur = "0.19.3"
native-dialog = { version = "0.9.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
webp = "0.3.0"
winresource = "0.1.22"
windows-sys = { version = "0.60.2", features = ["Win32_Graphics_Dwm"] }

[profile.release]
codegen-units = 1
lto = true # "thin"
opt-level = "s"
panic = "abort"
strip = true
