[package]
name = "cli"
description = "Convert game screenshot"
build = "build.rs"
edition.workspace = true
version.workspace = true

[package.metadata.winresource]
FileDescription = "ConvertScreenshotCLI"
ProductName = "ConvertScreenshotCLI"

[[bin]]
name = "cs"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winresource.workspace = true

[dependencies]
clap.workspace = true
common = { path = "../common", features = ["cli"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
