[package]
name = "common"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap = { version = "^4.5", optional = true, features = ["derive", "env", "string", "unicode", "wrap_help"] }
serde = { version = "^1.0", features = ["derive"] }

[features]
cli = [ "clap" ]
default = []
