[package]
name = "gui"
description = "Convert game screenshot"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "cs-gui"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
eframe = "^0.31"
image = "^0.25"
egui = { version = "^0.31", default-features = false }
serde_json = "1.0.140"
webp = "^0.3"
native-dialog = { version = "^0.9", features = ["windows_dpi_awareness", "windows_visual_styles"] }
libblur = "^0.19"
