[package]
name = "gui"
description = "Convert game screenshot"
build = "build.rs"
edition.workspace = true
version.workspace = true

[package.metadata.winresource]
FileDescription = "ConvertScreenshotGUI"
ProductName = "ConvertScreenshotGUI"

[[bin]]
name = "cs-gui"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winresource.workspace = true

[dependencies]
common = { path = "../common" }
fltk-theme.workspace = true
fltk.workspace = true
image.workspace = true
libblur.workspace = true
native-dialog.workspace = true
serde_json.workspace = true
webp.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true
